--- a/src/styles/_task.scss
+++ b/src/styles/_task.scss
@@ -24,7 +24,7 @@
     }
 
     &__more-options {
-        
+        position: relative;
         display: flex;
         align-items: center;
         cursor: pointer;
